--- a/backend/templates/settings.html
+++ b/backend/templates/settings.html
@@ -111,11 +111,12 @@
 </head>
 <body>
     <div class="menu">
-        <a href="#home">Главная</a>
-        <a href="#settings">Настройки</a>
-        <a href="#profile">Профиль</a>
-        <a href="#logout">Выйти</a>
-        <a href="#logout">Бронирование</a>
+        <a href="/">Главная</a>
+        <a href="/admin/settings">Админ панель</a>
+        <a href="/login">Вход</a>
+        <a href="/register">Регистрация</a>
+        <a href="/logout">Выйти</a>
+        <a href="/book">Бронирование</a>
     </div>
 
     <h1>Настройки Администратора</h1>
