Add route get_all_settings

--- a/backend/templates/auth/login.html
+++ b/backend/templates/auth/login.html
@@ -63,7 +63,7 @@
 <body>
     <div class="menu">
         <a href="/">Главная</a>
-        <a href="/admin/settings">Админ панель</a>
+        <a href="/admin/setting">Админ панель</a>
         <a href="/login">Вход</a>
         <a href="/register">Регистрация</a>
         <a href="/logout">Выйти</a>
