--- a/frontend/settings/styles.css
+++ b/frontend/settings/styles.css
@@ -22,6 +22,27 @@ body {
     transition: background-color 0.3s;
 }
 
+.submenu {
+    background-color: #f2f2f2; /* Темно-серый цвет */
+    overflow: hidden;
+    padding: 10px 0;
+    margin-top: 10px; /* Отступ сверху */
+}
+
+.submenu a {
+    float: left;
+    display: block;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding: 10px 14px;
+    text-decoration: none;
+}
+
+.submenu a:hover {
+    background-color: #b5b1b1; /* Еще темнее при наведении */
+    transition: background-color 0.3s;
+}
+
 h1, h2 {
     color: #404040; /* Темно-серый для заголовков */
 }
